2022-07-18  Bruno Haible  <bruno@clisp.org>

	Move gnulib-tool invocation back from autopull.sh to autogen.sh.
	* autogen.sh: Revert last change. Improve comments.
	* autopull.sh: Only call 'gitsub.sh pull'.
	* m4/init-package-version.m4: Revert last change.

2022-07-17  Bruno Haible  <bruno@clisp.org>

	Split autogen.sh into autopull.sh and autogen.sh.
	* autopull.sh: New file, based on autogen.sh.
	* autogen.sh: Remove code that was moved to autopull.sh. Remove
	--skip-gnulib option.
	* HACKING: Mention autopull.sh.
	* m4/init-package-version.m4: Update comment.

2022-05-22  Bruno Haible  <bruno@clisp.org>

	Add GNU Project notice.
	* JOIN-GNU: New file. Inspired by a suggestion from José E. Marchesi
	on the gnu-prog-discuss mailing list.
	* README: Refer to it.
	* Makefile.am (EXTRA_DIST): Add it.

2022-05-15  Bruno Haible  <bruno@clisp.org>

	Upgrade to libtool 2.4.7.
	* m4/libtool.m4: Update from libtool-2.4.7, with modifications.
	2017-10-21  Bruno Haible  <bruno@clisp.org>
		Fix -export-symbols and -export-symbols-regex support on
		Solaris 11.3.
		* m4/libtool.m4 (_LT_CMD_GLOBAL_SYMBOLS): Adjust symcode for
		Solaris.
	2009-04-23  Bruno Haible  <bruno@clisp.org>
		Fix recognition of "nm" command.
		* m4/libtool.m4 (LT_PATH_NM): Try "nm" program also when
		compiling for mingw in a cygwin environment.
	2008-04-06  Bruno Haible  <bruno@clisp.org>
		* m4/libtool.m4 (LT_INIT): When setting LIBTOOL, use
		CONFIG_SHELL; don't assume that the Makefile.in will set SHELL
		to ${CONFIG_SHELL}.
	* m4/ltoptions.m4: Likewise.
	* m4/ltsugar.m4: Likewise.
	* m4/ltversion.m4: Likewise.
	* m4/lt~obsolete.m4: Likewise.
	* build-aux/ltmain.sh: Likewise.

2022-01-05  Bruno Haible  <bruno@clisp.org>

	doc: Document a new feature (already in version 1.0).
	* doc/uniconv.texi (uniconv.h): Document
	iconveh_question_replacement_character.

2022-01-04  Bruno Haible  <bruno@clisp.org>

	Prepare for 1.0 release.
	* version.sh: Bump version number, date, gnulib version.